[tool.poetry]
name = "busbud-dbt"
version = "0.1.0"
description = ""
authors = ["Busbud <dev@busbud.com>"]
readme = "README.md"
packages = [{include = "busbud_dbt"}]

[tool.poetry.dependencies]
python = "^3.11"
dbt-bigquery = "1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
